client/src/App.css
@font-face {
    font-family: "Glacial Indifference";
    font-style: normal;
    src: local("Glacial Indifference"), url(./assets/fonts/Glacial_Indifference/GlacialIndifference-Regular.otf) format("opentype");
}

.container-fluid {
    padding-left: 0;
    background-color:  #F3F5F4;
    /* overflow-y: auto; */
}

.divider {
    border-bottom: 2px solid #FFF;
    background-color: #DADADA;
    height: 2px;
    margin: 0.5em 0px 1.5em;
}

.divider span {
    display: block;
    width: 70px;
    height: 2px;
    background-color:#B45456;
}

#content-div {
    background-color:  #F3F5F4;
}

h1 {
    font-family: "Source Code Pro", monospace;
    font-size: 70px;
    color: #B45456;
    padding-bottom: 5px;
}

a.nav-link, .form-label, p {
    font-family: "Glacial Indifference", sans-serif;
    font-size: 20px;
}

.form-label, p {
    color: #3E4042;
}

img.card-img:hover {
    opacity: 0.85;
    cursor: pointer;
}

#sidebar-wrapper, #page-content-wrapper {
    min-height: 100vh;
    min-height: 100%;
}

#sidebar-wrapper, #page-content-wrapper o {
    background-color:  #F3F5F4;
}

button.btn.btn-secondary {
    border-radius: 5px;
}

/* Animated Switch Transition */
.fade-enter {
    opacity: 0;
    z-index: 1;
}

.fade-enter.fade-enter-active {
    opacity: 1;
    transition: opacity 320ms ease-in;
    min-height: 100vh;
}

.fade-exit {
    opacity: 0;
    z-index: 1;
}

.fade-exit.fade-exit-active {
    opacity: 1;
    transition: opacity 320ms ease-in;
    min-height: 100vh;
}

#resume-btn, #linkedin-btn, #github-btn {
    border-radius: 50px;
    width: 3em;
    height: 3em;
}

/* MEDIA QUERIES */
@media (min-width: 1600px) {
    h1 {
        font-size: 6.5em;
    }

    .react-icons {
        width: 6.3em;
        height: 6.3em;
    }

    .form-label, p {
        font-size: 1.8em;
    }

    #resume-btn, #linkedin-btn, #github-btn {
        border-radius: 50px;
        width: 4em;
        height: 4em;
    }
}

@media (max-width: 992px) {
    h1 {
        font-size: 6.2em;
    }

    .react-icons {
        width: 6.0em;
    }
    
    .form-label, p {
        font-size: 1.5em;
    }
}

@media (min-width: 800px) and (max-width: 991px) {
    h1 {
        font-size: 3.7em;
    }

    .react-icons {
        width: 3.5em;
    }
}

@media (max-width: 767px) {
    h1 {
        font-size: 3.7em;
    }

    .react-icons {
        width: 3.5em;
    }

    .form-label, p {
        font-size: 1.0em;
    }
}

@media (max-width: 668px) { 
    h1 { 
        font-size: 3.0em;
    }

    .react-icons {
        width: 3.0em;
    }

    .form-label, p {
        font-size: 1.0em;
    }
 }

